http request loggen
